5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4470/executions/1590_1015.log
== TEST (2019-03-29 20:35:03) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor"))
b = int(input("Segundo valor"))
c = int(input("Terceiro valor"))
min(a,b,c)= var
max(a,b,c)= var2
in= a + b + c - var2 - var
-- ERROR:
File "XXXX", line 9
    in= a + b + c - var2 - var
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:37:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor"))
b = int(input("Segundo valor"))
c = int(input("Terceiro valor"))
min(a,b,c)= x
max(a,b,c)= z
in= (a + b + c - (z - x))

-- ERROR:
File "XXXX", line 9
    in= (a + b + c - (z - x))
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:38:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor"))
b = int(input("Segundo valor"))
c = int(input("Terceiro valor"))
min(a,b,c)= x
max(a,b,c)= z
in= a + b + c - z - x
print(min)
-- ERROR:
File "XXXX", line 9
    in= a + b + c - z - x
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:38:21) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor"))
b = int(input("Segundo valor"))
c = int(input("Terceiro valor"))
min(a,b,c)= x
max(a,b,c)= z
in= a + b + c - z - x
print(min)
-- ERROR:
File "XXXX", line 9
    in= a + b + c - z - x
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:38:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor"))
b = int(input("Segundo valor"))
c = int(input("Terceiro valor"))
min(a,b,c)= x
max(a,b,c)= z
in= a + b + c - z - x
print(min)
print(in)
print(maxx)
-- ERROR:
File "XXXX", line 9
    in= a + b + c - z - x
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:38:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor"))
b = int(input("Segundo valor"))
c = int(input("Terceiro valor"))
min(a,b,c)= x
max(a,b,c)= z
in= a + b + c - z - x
print(min)
print(in)
print(maxx)
-- ERROR:
File "XXXX", line 9
    in= a + b + c - z - x
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:38:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor"))
b = int(input("Segundo valor"))
c = int(input("Terceiro valor"))
min(a,b,c)= x
max(a,b,c)= z
in= a + b + c - z - x
print(min)
print(in)
print(max)
-- ERROR:
File "XXXX", line 9
    in= a + b + c - z - x
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:39:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor:"))
b = int(input("Segundo valor:"))
c = int(input("Terceiro valor:"))
min(a,b,c)= x
max(a,b,c)= z
in= a + b + c - z - x
print(min)
print(in)
print(max)
-- ERROR:
File "XXXX", line 9
    in= a + b + c - z - x
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:40:05) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor:"))
b = int(input("Segundo valor:"))
c = int(input("Terceiro valor:"))
min(a,b,c)= x
max(a,b,c)= z
in= a + b + c - min(a,b,c) - max(a,b,c)
print(min)
print(in)
print(max)
-- ERROR:
File "XXXX", line 9
    in= a + b + c - min(a,b,c) - max(a,b,c)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:40:12) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor:"))
b = int(input("Segundo valor:"))
c = int(input("Terceiro valor:"))
min(a,b,c)= x
max(a,b,c)= z
in= a + b + c - min(a,b,c) - max(a,b,c)
print(min)
print(in)
print(max)
-- ERROR:
File "XXXX", line 9
    in= a + b + c - min(a,b,c) - max(a,b,c)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:41:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor:"))
b = int(input("Segundo valor:"))
c = int(input("Terceiro valor:"))
min(A,B,C)= x
max(A,B,C)= z
in= A + B + C - min(A,B,C) - max(A,B,C)
print(C)
print(in)
print(A)
-- ERROR:
File "XXXX", line 9
    in= A + B + C - min(A,B,C) - max(A,B,C)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:41:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor:"))
b = int(input("Segundo valor:"))
c = int(input("Terceiro valor:"))
min(A,B,C)= x
max(A,B,C)= z
in= A + B + C - min(A,B,C) - max(A,B,C)
print(C)
print(in)
print(A)
-- ERROR:
File "XXXX", line 9
    in= A + B + C - min(A,B,C) - max(A,B,C)
     ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:43:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor:"))
b = int(input("Segundo valor:"))
c = int(input("Terceiro valor:"))
min(A,B,C)= x
max(A,B,C)= 
in= A + B + C - min(A,B,C) - max(A,B,C)
print((min(A,B,C)), (in), (max(A,B,C)))
-- ERROR:
File "XXXX", line 8
    max(A,B,C)= 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:44:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor:"))
b = int(input("Segundo valor:"))
c = int(input("Terceiro valor:"))
min(A,B,C)= x
max(A,B,C)= 
in= A + B + C - min(A,B,C) - max(A,B,C)
print((min(A,B,C)), (in), (max(A,B,C)))
-- ERROR:
File "XXXX", line 8
    max(A,B,C)= 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:44:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor:"))
b = int(input("Segundo valor:"))
c = int(input("Terceiro valor:"))
min(A,B,C)= x
max(A,B,C)= 
I= A + B + C - min(A,B,C) - max(A,B,C)
print((min(A,B,C)), (I), (max(A,B,C)))
-- ERROR:
File "XXXX", line 8
    max(A,B,C)= 
               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:44:48) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor:"))
b = int(input("Segundo valor:"))
c = int(input("Terceiro valor:"))
I= A + B + C - min(A,B,C) - max(A,B,C)
print((min(A,B,C)), (I), (max(A,B,C)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    I= A + B + C - min(A,B,C) - max(A,B,C)
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:45:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor:"))
b = int(input("Segundo valor:"))
c = int(input("Terceiro valor:"))
I= A + B + C - min(A,B,C) - max(A,B,C)
print((min(A,B,C)), (I), (max(A,B,C)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    I= A + B + C - min(A,B,C) - max(A,B,C)
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:45:31) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor:"))
b = int(input("Segundo valor:"))
c = int(input("Terceiro valor:"))
I= A + B + C - min(A,B,C) - max(A,B,C)
print((min(A,B,C)), (I), (max(A,B,C)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    I= A + B + C - min(A,B,C) - max(A,B,C)
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 20:45:36) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor:"))
b = int(input("Segundo valor:"))
c = int(input("Terceiro valor:"))
I= A + B + C - min(A,B,C) - max(A,B,C)
print((min(A,B,C)), (I), (max(A,B,C)))
-- EXECUTION TIME:
0.157673
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 7, in <module>
    I= A + B + C - min(A,B,C) - max(A,B,C)
NameError: name 'A' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:45:44) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor:"))
b = int(input("Segundo valor:"))
c = int(input("Terceiro valor:"))
I= A + B + C - min(A,B,C) - max(A,B,C)
print((min(A,B,C)), (I), (max(A,B,C)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    I= A + B + C - min(A,B,C) - max(A,B,C)
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 20:46:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor:"))
b = int(input("Segundo valor:"))
c = int(input("Terceiro valor:"))
I = A + B + C - min(A,B,C) - max(A,B,C)
print((min(A,B,C)), (I), (max(A,B,C)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    I = A + B + C - min(A,B,C) - max(A,B,C)
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 20:46:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor:"))
b = int(input("Segundo valor:"))
c = int(input("Terceiro valor:"))
I = A + B + C - min(A,B,C) - max(A,B,C)
print((min(A,B,C)), (I), (max(A,B,C)))
-- EXECUTION TIME:
0.12865
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1590/1015/main.py", line 7, in <module>
    I = A + B + C - min(A,B,C) - max(A,B,C)
NameError: name 'A' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:00:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
a = int(input("Primeiro valor:"))
b = int(input("Segundo valor:"))
c = int(input("Terceiro valor:"))
I = A + B + C - min(A,B,C) - max(A,B,C)
print((min(A,B,C)), (I), (max(A,B,C)))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    I = A + B + C - min(A,B,C) - max(A,B,C)
NameError: name 'A' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-29 23:02:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
A = int(input("Primeiro valor:"))
B = int(input("Segundo valor:"))
C = int(input("Terceiro valor:"))
I = A + B + C - min(A,B,C) - max(A,B,C)
print((min(A,B,C)), (I), (max(A,B,C)))
-- OUTPUT:
-2 0 10
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-29 23:02:45) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
A = int(input("Primeiro valor:"))
B = int(input("Segundo valor:"))
C = int(input("Terceiro valor:"))
I = A + B + C - min(A,B,C) - max(A,B,C)
print((min(A,B,C)), (I), (max(A,B,C)))
-- EXECUTION TIME:
0.142849
-- TEST CASE 1:
---- input:
10 -2 0
---- correct output:
-2 0 10
---- user output:
-2 0 10
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
